Fixed bug with timeline alignment

--- a/src/components/ActiveProjects/activeproject.css
+++ b/src/components/ActiveProjects/activeproject.css
@@ -78,7 +78,6 @@
     line-height: 1.53846154;
     font-family: "Public Sans",
         sans-serif;
-    color: rgb(47 43 61 / 0.7);
 }
 
 .flex-column h4 {
