--- a/src/components/Charts/orderchart.css
+++ b/src/components/Charts/orderchart.css
@@ -5,3 +5,7 @@
     font-family: "Public Sans",
         sans-serif !important;
 }
+
+.jsx-641832bb2f8ff865.order-chart-container {
+    background-color: #3e3f52 !important;
+}
